--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
